<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/settings_frame_min_height"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_card2_country_language"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:background="@drawable/settings_card_selector"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_country_language"
                android:textStyle="normal"
                android:layout_marginLeft="5dp"
                android:textColor="@color/settings_text_color"
                android:layout_gravity="center_vertical|left" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical|right"
                android:src="@mipmap/ic_more" />


        </LinearLayout>

    </LinearLayout>

    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/color_tablayout_below_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|left"
        android:background="@drawable/settings_card_selector"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_night_mode"
                android:textStyle="normal"
                android:textColor="@color/settings_text_color"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical|left" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1">

            <Switch
                android:id="@+id/mode_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_gravity="right"
                android:switchMinWidth="20dp"
                android:textOn="  "
                android:textOff="  "

                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_tablayout_below_line"/>

    <LinearLayout
        android:id="@+id/layout_card2_templates"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:background="@drawable/settings_card_selector"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_template"
                android:textStyle="normal"
                android:layout_marginLeft="5dp"
                android:textColor="@color/settings_text_color"
                android:layout_gravity="center_vertical|left" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical|right"
                android:src="@mipmap/ic_more" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
